# pypga

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py  usage.py
.github/workflows/: python-tests.yml
pypga/: __init__.py  example.py  idea_fpga.py
pypga/boards/: __init__.py
pypga/boards/stemlab125_14/: __init__.py  builder.py  clock.py  soc.py
pypga/core/: __init__.py  builder.py  common.py  logic_function.py  migen.py  module.py  register.py  settings.py
pypga/core/interface/: __init__.py  csrmap.py  interface.py
pypga/core/migen_axi/: __init__.py
pypga/core/testsupport/: integration.py
pypga/example/: top.py
pypga/examples/: alternative_design.py  build.py  ex01_example_design.py  ex02_stemlab125_14.py  ex03_stemlab125_14.py  most_simple_example.py  top.py
pypga/interface/: __init__.py  board.py  client.py  csrmap.py  interface.py
pypga/interface/client/: __init__.py  client.py  interface.py  server.py  sshshell.py
pypga/interface/server/: Makefile  server_0.95
pypga/modules/: awg.py  axiwriter.py  counter.py  daq.py  led.py  mux.py  pulsegen.py  ram.py  ram_old.py  rom.py
pypga/modules/migen/: adder.py  awg.py  axiramwriter.py  axiwriter.py  counter.py  mux.py  pid.py  pulsegen.py  ram.py  spi.py  spimachine.py
tests/: test_build.py
tests/integration/stemlab-125-14/: conftest.py  test_array_readonly.py  test_array_readwrite.py  test_awg.py  test_axi_writer.py  test_axiwriter.py  test_counter.py  test_gpio.py  test_rom.py  test_signed_registers.py  test_spi.py  (+1 more)
(+25 files in other folders)
